--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,5 +9,5 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     generate-ddl: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show_sql: true
