--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,10 @@ dependencies {
 	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+	// sms 인증번호 전송
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+	implementation 'net.nurigo:javaSDK:2.2'
 }
 
 tasks.named('test') {
